--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
     <meta charset="UTF-8" />
 
+    <style>
+
+        #gameScreen{
+            border: 1px solid black;
+
+        }
+
+    </style>
+
 </head>
 
 
@@ -13,7 +22,7 @@
 
 
 
-
+<canvas id="gameScreen" width="800px" height="800px"></canvas>
 
 
 
