--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
         }
 
+        img {
+            display: none;
+        }
+
     </style>
 
 </head>
@@ -20,14 +24,13 @@
 
 <body>
 
-
-
-<canvas id="gameScreen" width="800px" height="800px"></canvas>
-
-
+    <img id="img_ball" src="assets/images/ball.png">
 
     
-<script src="src/index.js"></script>
+    <canvas id="gameScreen" width="800px" height="800px"></canvas>
+
+        
+    <script src="src/index.js" type="module"></script>
 
 </body>
 
