--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 
     <img id="img_ball" src="assets/images/ball.png">
+    <img id="img_brick" src="assets/images/brick.png">
 
     
     <canvas id="gameScreen" width="800px" height="800px"></canvas>
