Rettet ting til og fundet fejl. Virker det nu? :(

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <canvas id="gameScreen" width="800px" height="800px"></canvas>
 
         
-    <script src="src/index.js" type="module"></script>
+    <script type="module" src="src/index.js"></script>
 
 </body>
 
