Favicon fun og lidt andet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <meta charset="UTF-8" />
 
+    <link rel="shortcut icon" href="assets/images/faviboi.png" type="image/x-icon">
+
     <style>
 
         #gameScreen{
